more bugs, IGEM page finished

--- a/html/Scientists/LabResources.html
+++ b/html/Scientists/LabResources.html
@@ -109,8 +109,8 @@
               <a href="organismsAndChemicals.html" class="btn btn-primary">Pre-approved Organisms and Chemicals</a>
             </div>
             <div class="col-md-3 text-center mb-3">
-              <a href="#" class="btn btn-primary disabled">Contact Ed, our Biosafety Officer</a>
-              <!--TODO: Biosafety form -->
+              <a href="mailto:safety@bugssonline.org" class="btn btn-primary disabled">Contact Ed, our Biosafety Officer</a>
+  
             </div>
           </div>
         </div>
