--- a/html/Scientists/howToTeach.html
+++ b/html/Scientists/howToTeach.html
@@ -33,8 +33,8 @@
 
     <!--font awesome cdn for social Buttons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--TODO: Change Title -->
-    <title>Page Title</title>
+
+    <title>How To Teach</title>
 
   </head>
   <body class="bg-black">
