--- a/html/Community/Community_Landing.html
+++ b/html/Community/Community_Landing.html
@@ -37,8 +37,7 @@
 
   </head>
   <body class="bg-black">
-    <!--TODO: Update Active classes on links if applicable-->
-    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
+
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
       <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
@@ -203,7 +202,7 @@
                       You may be curious about the fish you purchase at your grocery store or local market. Is it really what they say it is? Test it for yourself in our lab and learn the process of DNA isolation, PCR, gel electrophoresis, and DNA
                       barcoding and sequencing! Class will be appropriate for adults, and advanced high school students.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -225,7 +224,7 @@
                       The month of October we will be teaching RNA detection by real-time PCR! Join us as we learn how to analyze gene expression. We’ll take an RNA sample and perform reverse transcription to create a DNA copy and then amplify that
                       DNA to precisely measure gene expression level.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -249,7 +248,7 @@
                       Starr, Founder & Principal at Chesapeake Visions, consisting of an informational briefing on market research & customer discovery and why its vital to the success of any new venture, discussion of best practices, and short
                       breakout sessions for attendees to apply concepts learned to their own ideas.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -270,7 +269,7 @@
                       Are your genes making you stressed? In this class participants will check themselves for a variant in the serotonin transporter gene (SLC6A4) associated with stress resiliency to explore the relationship between genes,
                       environment, and personality traits. Class will be appropriate for adults, and advanced high school students.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -292,7 +291,7 @@
                       hard to combat by focusing on the proteins of the flu virus and our immune response. We’ll learn how to detect flu proteins in the lab using the ELISA technique. Class will be appropriate for adults, and advanced high school
                       students.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -314,7 +313,7 @@
                       technology in the treatment of disease-which diseases does it work best for? Which genetic disease communities are most excited about the prospects? Then we’ll move into the lab to learn how to use CRISPR to edit DNA sequences
                       to our exact specifications. Class will be appropriate for adults, and advanced high school students.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -335,7 +334,7 @@
                       It’s glow time! Let’s learn about bioluminescence by working with a glowing bacteria. These brilliant “bugs” glow in response to oxygen or movement to create a mesmerizing glow effect. In this hands-on workshop we will get a
                       chance to build and create gadgets (e.g. a tube that pushes oxygen through the bacterial culture with a push of a button) to show off this incredible property! This course is appropriate for students in middle school and up.
                     </p>
-                    <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
+                    <!--<a href="#" class="btn btn-primary border-white mt-auto">More Information</a>-->
                   </div>
                 </div>
               </div>
@@ -346,7 +345,7 @@
       </div>
     </div>
 
-    <!-- TODO: PICK A FOOTER OPTION-->
+
     <!--FOOTER Default BG/ACCENT TEXT-->
     <footer class="border-top mt-3">
       <!-- Add font awesome icons -->
