--- a/html/Scientists/Scientists_Landing.html
+++ b/html/Scientists/Scientists_Landing.html
@@ -40,7 +40,7 @@
   <body class="bg-black">
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
-      <a class="navbar-brand" href="#"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
+      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -69,7 +69,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">For Scientists</a>
+            <a class="nav-link active" href="../Scientists/Scientists_Landing.html">For Scientists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Community/Community_Landing.html">For Community Members</a>
