--- a/html/Scientists/howToTeach.html
+++ b/html/Scientists/howToTeach.html
@@ -38,8 +38,7 @@
 
   </head>
   <body class="bg-black">
-    <!--TODO: Update Active classes on links if applicable-->
-    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
+    
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
       <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
@@ -71,7 +70,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">For Scientists</a>
+            <a class="nav-link active" href="../Scientists/Scientists_Landing.html">For Scientists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Community/Community_Landing.html">For Community Members</a>
