--- a/html/About/index.html
+++ b/html/About/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
   <meta http-equiv="Refresh" content="0; url=About_Landing_Page.html" />
+  <title>BUGSS</title>
   </head>
   <body>
    <p>Please follow <a href="About_Landing_Page.html">this link</a>.</p>
