--- a/theme.html
+++ b/theme.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
     <link rel="stylesheet" href="css/SASS/BUGSS_Styles.css">
