--- a/html/Support/index.html
+++ b/html/Support/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
   <meta http-equiv="Refresh" content="0; url=Support_Us_Landing.html" />
   </head>
