--- a/html/Membership/EntreprenuerProgram.html
+++ b/html/Membership/EntreprenuerProgram.html
@@ -39,7 +39,7 @@
     <script src="../../js/formValidation.js"></script>
   </head>
   <body class="bg-black">
-    
+
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
       <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
@@ -84,10 +84,7 @@
             <a class="nav-link" href="../Support/Support_Us_Landing.html">Support Us</a>
           </li>
         </ul>
-        <!--<form class="form-inline" method="get" action="../search.php">
-          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>-->
+
       </div>
     </nav>
     <ul class="nav nav-fill nav-pills bg-primary">
@@ -199,14 +196,14 @@
                   <input type="hidden" name="on0" value="Payment Options">
                   <div class="form-group">
                     <div class="form-check">
-                      <input type="radio" class="form-check-input" name="os0" value="Monthly Power Membership" required>
-                      <label class="form-check-label" for="exampleRadios1">
+                      <input type="radio" class="form-check-input" name="os0" id="MonthyPowerID" value="Monthly Power Membership" required>
+                      <label class="form-check-label" for="MonthyPowerID">
                         Monthly : $200.00 USD
                       </label>
                     </div>
                     <div class="form-check">
-                      <input type="radio" class="form-check-input" name="os0" value="Annual Power Membership" required>
-                      <label class="form-check-label" for="exampleRadios1">
+                      <input type="radio" class="form-check-input" name="os0" id="YearlyPowerID" value="Annual Power Membership" required>
+                      <label class="form-check-label" for="YearlyPowerID">
                         Annual : $2,400.00 USD
                       </label>
                       <div class="invalid-feedback">
@@ -243,14 +240,14 @@
                   <input type="hidden" name="on0" value="Payment Options">
                   <div class="form-group">
                     <div class="form-check">
-                      <input type="radio" class="form-check-input" name="os0" value="Monthly Joint Entrepreneur and Harbor Launch Membership" required>
-                      <label class="form-check-label" for="exampleRadios1">
+                      <input type="radio" class="form-check-input" name="os0" id="jointmonth" value="Monthly Joint Entrepreneur and Harbor Launch Membership" required>
+                      <label class="form-check-label" for="jointmonth">
                         Monthly : $300.00 USD
                       </label>
                     </div>
                     <div class="form-check">
-                      <input type="radio" class="form-check-input" name="os0" value="Annual Joint Entrepreneur and Harbor Launch Membership" required>
-                      <label class="form-check-label" for="exampleRadios1">
+                      <input type="radio" class="form-check-input" name="os0" id="jointyear" value="Annual Joint Entrepreneur and Harbor Launch Membership" required>
+                      <label class="form-check-label" for="jointyear">
                         Annual : $3600.00 USD
                       </label>
                       <div class="invalid-feedback">
