--- a/html/Community/index.html
+++ b/html/Community/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <title>BUGSS</title>
   <meta http-equiv="Refresh" content="0; url=Community_Landing.html" />
   </head>
+
   <body>
    <p>Please follow <a href="Community_Landing.html">this link</a>.</p>
  </body>
