--- a/html/Projects/index.html
+++ b/html/Projects/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <title>BUGSS</title>
   <meta http-equiv="Refresh" content="0; url=Projects_Landing.html" />
   </head>
   <body>
